Added stock app link

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <h1 id="color">Portfolio</h1>
                 <hr>
                 <br/>
-                <div class="project"><a class="proj-name" href="">Hangman</a></div>
+                <div class="project"><a class="proj-name" href="https://kikim1025.github.io/IEX-Stock-Search-App/">IEX Stock Info App</a></div>
                 <div class="project"><a class="proj-name" href="">RPG Game</a></div>
                 <div class="project"><a class="proj-name" href="">Trivia Game</a></div>
                 <div class="project"><a class="proj-name" href="">Rutgers Info Widget</a></div>
